# wxtemplate

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
